[gd_scene load_steps=2 format=3 uid="uid://gnknhq01f4rf"]

[ext_resource type="Script" uid="uid://dwdxcagrnrhh0" path="res://family_scene.gd" id="1_lafal"]

[node name="FamilyScene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_lafal")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 264.0
offset_top = 186.0
offset_right = 932.0
offset_bottom = 555.0
theme_override_constants/separation = 20

[node name="LeftPanel" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="FamilyListVBox" type="VBoxContainer" parent="HBoxContainer/LeftPanel"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
alignment = 1

[node name="MiddlePanel" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MiddlePanel"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="FamilyImage" type="TextureRect" parent="HBoxContainer/MiddlePanel/VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
expand_mode = 2

[node name="GenderToggle" type="CheckButton" parent="HBoxContainer/MiddlePanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Gender  "

[node name="NameInput" type="LineEdit" parent="HBoxContainer/MiddlePanel/VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="HBoxContainer/MiddlePanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
autowrap_mode = 3

[node name="ConfirmButton" type="Button" parent="HBoxContainer/MiddlePanel/VBoxContainer"]
layout_mode = 2
text = "Confirm"

[node name="RightPanel" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/RightPanel"]
layout_mode = 2

[node name="ConfirmedListVBox" type="VBoxContainer" parent="HBoxContainer/RightPanel/ScrollContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 668.0
offset_right = 81.0
offset_bottom = 707.0
text = "Back"
